--- a/WebUI/ClientApp/src/app/сontroler/Calls/components/acceptManager/acceptManager.component.sass
+++ b/WebUI/ClientApp/src/app/сontroler/Calls/components/acceptManager/acceptManager.component.sass
@@ -412,6 +412,12 @@ mat-expansion-panel.mat-expanded
     .mat-expansion-panel-header-title 
       color: white
       font-size: 18px
+      .status
+        width: 10px
+        position: absolute
+        left: 0
+        height: 64px
+        margin-top: -19px
 
 .table-expansion-element-body
   margin-top: 20px
@@ -433,3 +439,6 @@ mat-expansion-panel.mat-expanded
   border: none
   border-bottom: 1px solid #e6e6e6
   box-shadow: none
+
+.mat-card 
+  min-height: 100vh
