--- a/WebUI/ClientApp/src/app/сontroler/plan-task/dialog/accept-manager-dialog/accept-manager-dialog.component.html
+++ b/WebUI/ClientApp/src/app/сontroler/plan-task/dialog/accept-manager-dialog/accept-manager-dialog.component.html
@@ -5,73 +5,152 @@
 <mat-dialog-content>
   <button class="close" (click)="close()"><i class="fas fa-times fa-2x"></i></button>
   <div style="margin:10px">
-  <table mat-table [dataSource]="data">
+    <table mat-table [dataSource]="data" [hidden]="_isMobile()">
 
-    <ng-container matColumnDef="status">
-      <th colspan="1" mat-header-cell *matHeaderCellDef></th>
-      <td colspan="1" mat-cell *matCellDef="let element" [style.background]="setBagroundStatus(element)"></td>
-    </ng-container>
+      <ng-container matColumnDef="status">
+        <th colspan="1" mat-header-cell *matHeaderCellDef></th>
+        <td colspan="1" mat-cell *matCellDef="let element" [style.background]="setBagroundStatus(element)"></td>
+      </ng-container>
 
-    <ng-container matColumnDef="statusCall">
-      <th colspan="4" mat-header-cell *matHeaderCellDef>Статус</th>
-      <td colspan="4" mat-cell *matCellDef="let element">
-        <div class="action-circle" [style.background]="getActionColor(element)">
-        </div>
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="statusCall">
+        <th colspan="4" mat-header-cell *matHeaderCellDef>Статус</th>
+        <td colspan="4" mat-cell *matCellDef="let element">
+          <div class="action-circle" [style.background]="getActionColor(element)">
+          </div>
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="direction">
-      <th colspan="4" mat-header-cell *matHeaderCellDef>Статус звонка</th>
-      <td colspan="4" mat-cell *matCellDef="let element">
-        <img src="Icon/yesIncoming.png" height="30" width="30" *ngIf="element.direction == 'Исходящий' && element.durations != 0" />
-        <img src="Icon/yesOutgoing.png" height="30" width="30" *ngIf="element.direction == 'Входящий' && element.durations != 0" />
-        <img src="Icon/noOutgoing.png" height="30" width="30" *ngIf="element.direction == 'Входящий' && element.durations == 0" />
-        <img src="Icon/noIncoming.png" height="30" width="30" *ngIf="element.direction == 'Исходящий' && element.durations == 0" />
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="direction">
+        <th colspan="4" mat-header-cell *matHeaderCellDef>Статус звонка</th>
+        <td colspan="4" mat-cell *matCellDef="let element">
+          <img src="Icon/yesIncoming.png" height="30" width="30"
+            *ngIf="element.direction == 'Исходящий' && element.durations != 0" />
+          <img src="Icon/yesOutgoing.png" height="30" width="30"
+            *ngIf="element.direction == 'Входящий' && element.durations != 0" />
+          <img src="Icon/noOutgoing.png" height="30" width="30"
+            *ngIf="element.direction == 'Входящий' && element.durations == 0" />
+          <img src="Icon/noIncoming.png" height="30" width="30"
+            *ngIf="element.direction == 'Исходящий' && element.durations == 0" />
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="title">
-      <th colspan="4" mat-header-cell *matHeaderCellDef>Название</th>
-      <td colspan="4" mat-cell *matCellDef="let element">{{element.titleClient}} </td>
-    </ng-container>
+      <ng-container matColumnDef="title">
+        <th colspan="4" mat-header-cell *matHeaderCellDef>Название</th>
+        <td colspan="4" mat-cell *matCellDef="let element">{{element.titleClient}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="phone">
-      <th colspan="4" mat-header-cell *matHeaderCellDef>Номер тел</th>
-      <td colspan="4" mat-cell *matCellDef="let element">{{element.phone}}</td>
-    </ng-container>
+      <ng-container matColumnDef="phone">
+        <th colspan="4" mat-header-cell *matHeaderCellDef>Номер тел</th>
+        <td colspan="4" mat-cell *matCellDef="let element">{{element.phone}}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="duration">
-      <th colspan="4" mat-header-cell *matHeaderCellDef>Продолжи..</th>
-      <td colspan="4" mat-cell *matCellDef="let element" style="max-width: 300px">{{element.durations}} Сек</td>
-    </ng-container>
+      <ng-container matColumnDef="duration">
+        <th colspan="4" mat-header-cell *matHeaderCellDef>Продолжи..</th>
+        <td colspan="4" mat-cell *matCellDef="let element" style="max-width: 300px">{{element.durations}} Сек</td>
+      </ng-container>
 
-    <ng-container matColumnDef="date">
-      <th colspan="4" mat-header-cell *matHeaderCellDef>Дата</th>
-      <td colspan="4" mat-cell *matCellDef="let element">{{element.date}}</td>
-    </ng-container>
+      <ng-container matColumnDef="date">
+        <th colspan="4" mat-header-cell *matHeaderCellDef>Дата</th>
+        <td colspan="4" mat-cell *matCellDef="let element">{{element.date}}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="comentCon">
-      <th colspan="14" mat-header-cell *matHeaderCellDef>Комментарий контролера</th>
-      <td colspan="14" mat-cell *matCellDef="let element">
-        <textarea *ngIf="element.contactType != 50" style="width:250px;height:60px;">{{element.callsComments?.comment}}</textarea><br />
-        <button *ngIf="element.contactType != 50" (click)="setNoAccept($event, element.id, element.clientId)" class="btnAccept">Отклонить</button>
-        <button *ngIf="element.contactType != 50" (click)="setAccept($event, element.id, element.clientId)" class="btnAccept">Исправлено</button>
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="comentCon">
+        <th colspan="14" mat-header-cell *matHeaderCellDef>Комментарий контролера</th>
+        <td colspan="14" mat-cell *matCellDef="let element">
+          <textarea *ngIf="element.contactType != 50"
+            style="width:100%;height:60px;margin-top: 15px;">{{element.callsComments?.comment}}</textarea><br />
+          <div class="btnContainer">
+            <button *ngIf="element.contactType != 50" (click)="setNoAccept($event, element.id, element.clientId)"
+              class="btnAccept btnReject">Отклонить</button>
+            <button *ngIf="element.contactType != 50" (click)="setAccept($event, element.id, element.clientId)"
+              class="btnAccept btnFixed">Исправлено</button>
+          </div>
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="comentCli">
-      <th colspan="7" mat-header-cell *matHeaderCellDef>Комментарий менеджера</th>
-      <td colspan="7" mat-cell *matCellDef="let element">{{element.callsComments?.managerComment}}</td>
-    </ng-container>
+      <ng-container matColumnDef="comentCli">
+        <th colspan="7" mat-header-cell *matHeaderCellDef>Комментарий менеджера</th>
+        <td colspan="7" mat-cell *matCellDef="let element">{{element.callsComments?.managerComment}}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="refAudio">
-      <th colspan="14" mat-header-cell *matHeaderCellDef>Аудио запись</th>
-      <td colspan="14" mat-cell *matCellDef="let element"><audio style="height:20px" controls preload="none" src="{{element.referenceAudioVoice}}"></audio></td>
-    </ng-container>
+      <ng-container matColumnDef="refAudio">
+        <th class="audio-cell" mat-header-cell *matHeaderCellDef>Аудио запись</th>
+        <td class="audio-cell" mat-cell *matCellDef="let element">
+          <img *ngIf="element.contactType != 50" (click)="playAudio($event, element.id, element.referenceAudioVoice)"
+            class="audio-cell-icon" [src]="_display_audio_icon(element.id)" />
+          <audio class="audio-cell audio-cell-play" style="height:20px" controls preload="none"
+            src="{{element.referenceAudioVoice}}"></audio>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (dblclick)="openEditClientForm(row)"></tr>
-  </table>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;" (dblclick)="openEditClientForm(row)"></tr>
+    </table>
+
+    <div class="bodyAllExpansion" [hidden]="!_isMobile()">
+      <mat-accordion>
+        <ng-container class="table-expansion-element" *ngFor="let element of data; let idx = index">
+          <mat-expansion-panel>
+            <mat-expansion-panel-header>
+              <mat-panel-title>
+                <div class="status" [style.background]="setBagroundStatus(element)"></div>
+                <div>
+                  {{element.titleClient}}
+                </div>
+              </mat-panel-title>
+            </mat-expansion-panel-header>
+            <div class="table-expansion-element-body">
+              <div class="element-item statusCall">
+                <b>Статус:</b>
+                <div class="action-circle" [style.background]="getActionColor(element)"></div>
+              </div>
+              <div class="element-item direction">
+                <b> Статус звонка:</b>
+                <img src="Icon/yesIncoming.png" height="30" width="30"
+                  *ngIf="element.direction == 'Исходящий' && element.durations != 0" />
+                <img src="Icon/yesOutgoing.png" height="30" width="30"
+                  *ngIf="element.direction == 'Входящий' && element.durations != 0" />
+                <img src="Icon/noOutgoing.png" height="30" width="30"
+                  *ngIf="element.direction == 'Входящий' && element.durations == 0" />
+                <img src="Icon/noIncoming.png" height="30" width="30"
+                  *ngIf="element.direction == 'Исходящий' && element.durations == 0" />
+              </div>
+              <div class="element-item title"><b>Название:</b> {{element.titleClient}}</div>
+              <div class="element-item phone"><b>Номер телефона:</b>{{element.phone}}</div>
+              <div class="element-item duration"><b>Время звонка:</b>{{element.durations}} Сек</div>
+              <div class="element-item date"><b>Дата:</b>{{element.date}}</div>
+              <div class="element-item comentCon">
+                <b>Комментарий контролера:</b>
+                <div>
+                  <textarea *ngIf="element.contactType != 50"
+                    class="textComment">{{element.callsComments?.comment}}</textarea><br />
+                  <div class="btnContainer">
+                    <button *ngIf="element.contactType != 50"
+                      (click)="setNoAccept($event, element.id, element.clientId, i)"
+                      class="btnAccept btnReject">Отклонить</button>
+                    <button *ngIf="element.contactType != 50"
+                      (click)="setAccept($event, element.id, element.clientId, i)"
+                      class="btnAccept btnFixed">Исправлено</button>
+                  </div>
+                </div>
+              </div>
+              <div class="element-item comentCli">
+                <b>Комментарий менеджера:</b>
+                <div>
+                  {{element.callsComments?.managerComment}}
+                </div>
+              </div>
+              <div class="element-item refAudio">
+                <b>Аудио запись:</b>
+                <div>
+                  <audio class="audio-cell" style="height:20px" controls preload="none"
+                    src="{{element.referenceAudioVoice}}"></audio>
+                </div>
+
+              </div>
+            </div>
+          </mat-expansion-panel>
+        </ng-container>
+      </mat-accordion>
+    </div>
   </div>
 </mat-dialog-content>
-
