--- a/WebUI/ClientApp/src/app/сontroler/plan-task/plan-task/plan-task.component.sass
+++ b/WebUI/ClientApp/src/app/сontroler/plan-task/plan-task/plan-task.component.sass
@@ -34,6 +34,7 @@ th
 .mat-card
     padding: 0px
     padding-bottom: 20px
+    min-height: 100vh
 
 .bodyAll
     margin: 10px
@@ -140,6 +141,26 @@ th
         position: absolute
         right: 10px
         z-index: 10
+
+.filter-button
+  background: #62b4ff
+  position: fixed
+  top: 47vh
+  right: 0
+  padding: 10px 5px
+  border-top-left-radius: 6px
+  border-bottom-left-radius: 6px
+  z-index: 998
+
+.overlay.opened
+  position: absolute
+  top: 0
+  bottom: 0
+  left: 0
+  right: 0
+  overflow: hidden
+  z-index: 996
+  background: #000000cc
 
 #fountainG
   width: 186px
@@ -302,3 +323,69 @@ th
   td:hover
     text-overflow: clip
     overflow: inherit
+
+@media screen and (max-width: 820px)
+  .filter-container
+    overflow-y: scroll
+    position: absolute
+    width: min-content
+    display: none
+    top: 0
+    right: 0
+    height: 100%
+    background: white
+    z-index: 997
+
+  .filter-container.opened
+    right: 0
+    display: block
+    -webkit-animation: animateright 0.4s
+    animation: animateright 0.4
+
+  .filter
+    display: flex
+    flex-direction: column
+    margin-top: 20px
+    padding-right: 40px
+
+mat-expansion-panel.mat-expanded
+  border-radius: 0
+  mat-expansion-panel-header
+    background: #62b4ff
+    border-radius: 0
+    color: white
+    .mat-expansion-panel-header-title 
+      color: white
+      font-size: 18px
+      .status
+        width: 10px
+        position: absolute
+        left: 0
+        height: 64px
+        margin-top: -19px
+
+.table-expansion-element-body
+  margin-top: 20px
+  .element-item
+    line-height: 30px
+  b
+    margin-right: 10px
+  .statusCall
+    display: flex
+    .action-circle
+      margin-top: 7px
+  .direction b
+    vertical-align: top
+  .refAudio
+    .audio-cell
+      width: 100%
+  .comentCon
+    max-width: 300px
+    .btnContainer
+      .btnAccept
+        height: 30px
+
+.mat-expansion-panel
+  border: none
+  border-bottom: 1px solid #e6e6e6
+  box-shadow: none
