Добалеа функция и алгортьм добаления плана не только для текущих недель, а для всего месяца

--- a/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.html
@@ -354,14 +354,14 @@
         <ng-container matColumnDef="MSplanned">
           <th colspan="5" mat-header-cell *matHeaderCellDef style="background-color: #f0fbff">Теущий МС</th>
           <td [style.background]="checkCallForColor(element)" colspan="5" mat-cell *matCellDef="let element" (click)="openWeekPlans(element)">
-            {{getCurrentMsPlan(element.weekPlans).plan}}
+            {{getCurrentMsPlan(element.weekPlans)}}
           </td>
         </ng-container>
 
         <ng-container matColumnDef="RMplanned">
           <th colspan="5" mat-header-cell *matHeaderCellDef style="background-color: #e3f7ff">Текущий РМ </th>
           <td [style.background]="checkCallForColor(element)" colspan="5" mat-cell *matCellDef="let element" (click)="openWeekPlans(element)">
-            {{getCurrentRmPlan(element.weekPlans).plan}}
+            {{getCurrentRmPlan(element.weekPlans)}}
           </td>
         </ng-container>
 
@@ -585,14 +585,14 @@
         <ng-container matColumnDef="MSplanned">
           <th colspan="5" mat-header-cell *matHeaderCellDef style="background-color: #f0fbff">Теущий МС</th>
           <td [style.background]="checkCallForColor(element)" colspan="5" mat-cell *matCellDef="let element" (click)="openWeekPlans(element)">
-            {{getCurrentMsPlan(element.weekPlans).plan}}
+            {{getCurrentMsPlan(element.weekPlans)}}
           </td>
         </ng-container>
 
         <ng-container matColumnDef="RMplanned">
           <th colspan="5" mat-header-cell *matHeaderCellDef style="background-color: #e3f7ff">Текущий РМ </th>
           <td [style.background]="checkCallForColor(element)" colspan="5" mat-cell *matCellDef="let element" (click)="openWeekPlans(element)">
-            {{getCurrentRmPlan(element.weekPlans).plan}}
+            {{getCurrentRmPlan(element.weekPlans)}}
           </td>
         </ng-container>
 
@@ -817,14 +817,14 @@
             <ng-container matColumnDef="MSplanned">
               <th colspan="5" mat-header-cell *matHeaderCellDef style="background-color: #f0fbff">Теущий МС</th>
               <td  [style.background]="checkCallForColor(element)"colspan="5" mat-cell *matCellDef="let element" (click)="openWeekPlans(element)">
-                {{getCurrentMsPlan(element.weekPlans).plan}}
+                {{getCurrentMsPlan(element.weekPlans)}}
               </td>
             </ng-container>
 
             <ng-container matColumnDef="RMplanned">
               <th colspan="5" mat-header-cell *matHeaderCellDef style="background-color: #e3f7ff">Текущий РМ </th>
               <td [style.background]="checkCallForColor(element)" colspan="5" mat-cell *matCellDef="let element" (click)="openWeekPlans(element)">
-                {{getCurrentRmPlan(element.weekPlans).plan}}
+                {{getCurrentRmPlan(element.weekPlans)}}
               </td>
             </ng-container>
 
@@ -1048,14 +1048,14 @@
         <ng-container matColumnDef="MSplanned">
           <th colspan="5" mat-header-cell *matHeaderCellDef style="background-color: #f0fbff">Теущий МС</th>
           <td [style.background]="checkCallForColor(element)" colspan="5" mat-cell *matCellDef="let element" (click)="openWeekPlans(element)">
-            {{getCurrentMsPlan(element.weekPlans).plan}}
+            {{getCurrentMsPlan(element.weekPlans)}}
           </td>
         </ng-container>
 
         <ng-container matColumnDef="RMplanned">
           <th colspan="5" mat-header-cell *matHeaderCellDef style="background-color: #e3f7ff">Текущий РМ </th>
           <td [style.background]="checkCallForColor(element)" colspan="5" mat-cell *matCellDef="let element" (click)="openWeekPlans(element)">
-            {{getCurrentRmPlan(element.weekPlans).plan}}
+            {{getCurrentRmPlan(element.weekPlans)}}
           </td>
         </ng-container>
 
@@ -1279,14 +1279,14 @@
         <ng-container matColumnDef="MSplanned">
           <th colspan="5" mat-header-cell *matHeaderCellDef style="background-color: #f0fbff">Теущий МС</th>
           <td [style.background]="checkCallForColor(element)" colspan="5" mat-cell *matCellDef="let element" (click)="openWeekPlans(element)">
-            {{getCurrentMsPlan(element.weekPlans).plan}}
+            {{getCurrentMsPlan(element.weekPlans)}}
           </td>
         </ng-container>
 
         <ng-container matColumnDef="RMplanned">
           <th colspan="5" mat-header-cell *matHeaderCellDef style="background-color: #e3f7ff">Текущий РМ </th>
           <td [style.background]="checkCallForColor(element)" colspan="5" mat-cell *matCellDef="let element" (click)="openWeekPlans(element)">
-            {{getCurrentRmPlan(element.weekPlans).plan}}
+            {{getCurrentRmPlan(element.weekPlans)}}
           </td>
         </ng-container>
 
@@ -1513,14 +1513,14 @@
           <ng-container matColumnDef="MSplanned">
             <th colspan="5" mat-header-cell *matHeaderCellDef style="background-color: #f0fbff">Теущий МС</th>
             <td [style.background]="checkCallForColor(element)" colspan="5" mat-cell *matCellDef="let element" (click)="openWeekPlans(element)">
-              {{getCurrentMsPlan(element.weekPlans).plan}}
+              {{getCurrentMsPlan(element.weekPlans)}}
             </td>
           </ng-container>
 
           <ng-container matColumnDef="RMplanned">
             <th colspan="5" mat-header-cell *matHeaderCellDef style="background-color: #e3f7ff">Текущий РМ </th>
             <td [style.background]="checkCallForColor(element)" colspan="5" mat-cell *matCellDef="let element" (click)="openWeekPlans(element)">
-              {{getCurrentRmPlan(element.weekPlans).plan}}
+              {{getCurrentRmPlan(element.weekPlans)}}
             </td>
           </ng-container>
 
