--- a/WebUI/ClientApp/src/app/manager-rm/dashboard/components/dashboard-panel/dashboard-panel.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/dashboard/components/dashboard-panel/dashboard-panel.component.html
@@ -105,30 +105,30 @@
           </thead>
           <tbody>
             <tr *ngIf="Managerid.id == Managerid.workgroup.escortManagerId">
-              <td>{{fullPrecentEC.toFixed()}}%</td>
+              <td>{{fullPrecentEC.toFixed(2)}}%</td>
               <td colspan="2">Звонки развития</td>
               <td>{{performanceChartMC.numberPlan_DevelopmentCalls}}</td>
               <td>{{performanceChartMC.shiftPlan_DevelopmentCalls}}</td>
               <td>{{performanceChartMC.balls_DevelopmentCalls}}</td>
               <td>{{oneTasksEC}}</td>
               <td>{{oneBallsEC}}</td>
-              <td>{{tasksEC}}</td>
+              <td>{{tasksEC.toFixed()}}</td>
               <td>{{performanceChartMC.numberPlan_DevelopmentCalls*8}}</td>
-              <td>{{(performanceChartMC.numberPlan_DevelopmentCalls*8)-this.getToMonthkMesageEC()}}</td>
-              <td>{{ballsEC}}</td>
+              <td>{{performanceChartMC.numberPlan_DevelopmentCalls + getToMonthkMesageEC()}}</td>
+              <td>{{ballsEC.toFixed(2)}}</td>
             </tr>
             
             <tr *ngIf="Managerid.id == Managerid.workgroup.regionalManagerId">
-              <td rowspan="3">{{fullPrecentRM.toFixed()}}%</td>
+              <td rowspan="3">{{fullPrecentRM.toFixed(2)}}%</td>
               <td colspan="2">Встречи и командировки развития</td>
               <td>{{performanceChartRM.numberPlan_DevelopmentCalls}}</td>
-              <td>{{performanceChartRM.shiftPlan_DevelopmentCalls}}</td>
+              <td></td>
               <td>{{performanceChartRM.balls_DevelopmentCalls}}</td>
               <td></td>
               <td rowspan="3">{{ballsRM}} </td>
-              <td>{{performanceChartRM.numberPlan_DevelopmentCalls * performanceChartRM.balls_DevelopmentCalls}}</td>
-              <td>{{performanceChartRM.numberPlan_DevelopmentCalls * 8}}</td>
-              <td>{{(performanceChartRM.numberPlan_DevelopmentCalls * 8) - getToMonthkRegManager()}}</td>
+              <td>{{sumFactTrip}}</td>
+              <td>-</td>
+              <td>-</td>
               <td rowspan="3">{{oneBallsRM}}</td>
             </tr>
             <tr *ngIf="Managerid.id == Managerid.workgroup.regionalManagerId">
@@ -138,9 +138,9 @@
               <td>{{performanceChartRM.shiftPlan_YourShifts}}</td>
               <td rowspan="2">{{performanceChartRM.balls_YourShifts}}</td>
               <td>{{oneTasksRM}}</td>
-              <td rowspan="2">{{tasksRM}}</td>
+              <td rowspan="2">{{tasksRM.toFixed()}}</td>
               <td rowspan="2">{{performanceChartRM.numberPlan_YourShifts*8}}</td>
-              <td rowspan="2">{{(performanceChartRM.numberPlan_YourShifts*8) -  getToMonthkRegManager()}}</td>
+              <td rowspan="2">{{performanceChartRM.numberPlan_YourShifts + getToMonthkRegManager()}}</td>
             </tr>
             <tr *ngIf="Managerid.id == Managerid.workgroup.regionalManagerId">
               <td>Смены замещения</td>
