Добалены счетчики на количество МС звонков, РМ звонков, МС подтвержденых звонкво, РС подтвержденых звонкво, МС Писем, РМ писем, МС WhatsApp, РМ WhatsApp, , МС почина доля % всего звонков с учетом ограничений, РМ почина доля % всего звонков с учетом ограничений

--- a/WebUI/ClientApp/src/app/manager-rm/dashboard/components/dashboard-panel/dashboard-panel.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/dashboard/components/dashboard-panel/dashboard-panel.component.html
@@ -112,7 +112,7 @@
               <td>{{performanceChartMC.balls_DevelopmentCalls}}</td>
               <td>{{oneTasksEC}}</td>
               <td>{{oneBallsEC}}</td>
-              <td>{{tasksEC.toFixed()}}</td>
+              <td>{{tasksEC}}</td>
               <td>{{performanceChartMC.numberPlan_DevelopmentCalls*8}}</td>
               <td>{{performanceChartMC.numberPlan_DevelopmentCalls + getToMonthkMesageEC()}}</td>
               <td>{{ballsEC.toFixed(2)}}</td>
