--- a/WebUI/ClientApp/src/app/admin/workgroups/dialogs/performance-chart/performance-chart.component.html
+++ b/WebUI/ClientApp/src/app/admin/workgroups/dialogs/performance-chart/performance-chart.component.html
@@ -31,7 +31,7 @@
         </thead>
         <tbody>
           <tr>
-            <td>{{fullPrecentEC}}%</td>
+            <td>{{fullPrecentEC.toFixed(1)}}%</td>
             <td colspan="2">Звонки развития</td>
             <td><input type="number" (focusout)="setNumberPlan_DevelopmentCallsMC($event.currentTarget.value)" value="{{performanceChartMC.numberPlan_DevelopmentCalls}}"/></td>
             <td><input type="number" (focusout)="setShiftPlan_DevelopmentCallsMC($event.currentTarget.value)" value="{{performanceChartMC.shiftPlan_DevelopmentCalls}}" /></td>
@@ -40,23 +40,23 @@
             <td>{{oneBallsEC}}</td>
             <td>{{tasksEC}}</td>
             <td>{{performanceChartMC.numberPlan_DevelopmentCalls*8}}</td>
-            <td>{{(performanceChartMC.numberPlan_DevelopmentCalls*8) - data.callEsc.length}}</td>
-            <td>{{ballsEC}}</td>
+            <td>{{performanceChartMC.numberPlan_DevelopmentCalls + data.callEsc.length}}</td>
+            <td>{{ballsEC.toFixed(1)}}</td>
           </tr>
           <tr>
             <th colspan="12">Региональный менеджер</th>
           </tr>
           <tr>
-            <td rowspan="3">{{fullPrecentRM}}%</td>
+            <td rowspan="3">{{fullPrecentRM.toFixed(1)}}%</td>
             <td colspan="2">Встречи и командировки развития</td>
             <td><input type="number" (focusout)="setNumberPlan_DevelopmentCallsRM($event.currentTarget.value)" value="{{performanceChartRM.numberPlan_DevelopmentCalls}}" /></td>
-            <td><input type="number" (focusout)="setShiftPlan_DevelopmentCallsRM($event.currentTarget.value)" value="{{performanceChartRM.shiftPlan_DevelopmentCalls}}" /></td>
+            <td>-</td>
             <td><input type="number" (focusout)="setBalls_DevelopmentCallsRM($event.currentTarget.value)" value="{{performanceChartRM.balls_DevelopmentCalls}}" /></td>
             <td></td>
             <td rowspan="3">{{ballsRM}}</td>
-            <td>{{performanceChartRM.numberPlan_DevelopmentCalls * performanceChartRM.balls_DevelopmentCalls}}</td>
-            <td>{{performanceChartRM.numberPlan_DevelopmentCalls*8}}</td>  
-            <td>{{(performanceChartRM.numberPlan_DevelopmentCalls*8) - data.callReg.length}}</td>
+            <td>{{sumFactTrip}}</td>
+            <td>-</td>  
+            <td>-</td>
             <td rowspan="3">{{oneBallsRM}}</td>
           </tr>
           <tr>
@@ -67,14 +67,14 @@
             <td rowspan="2"><input type="number" (focusout)="setBalls_YourShiftsShiftsRM($event.currentTarget.value)" value="{{performanceChartRM.balls_YourShifts}}" /></td>
             <td>{{oneTasksRM}}</td>
             <td rowspan="2">{{tasksRM}}</td>
-            <td rowspan="2">{{performanceChartRM.numberPlan_YourShifts*8}}</td>
-            <td rowspan="2">{{(performanceChartRM.numberPlan_YourShifts*8) - data.callReg.length}}</td>
+            <td rowspan="2">{{performanceChartRM.numberPlan_DevelopmentCalls*8}}</td>
+            <td rowspan="2">{{(performanceChartRM.numberPlan_DevelopmentCalls) + data.callReg.length}}</td>
           </tr>
           <tr>
             <td>Смены замещения</td>
             <td><input type="number" (focusout)="setNumberPlan_SubstitutionShiftsRM($event.currentTarget.value)" value="{{performanceChartRM.numberPlan_SubstitutionShifts}}" /></td>
             <td><input type="number" (focusout)="setShiftPlan_SubstitutionShiftsRM($event.currentTarget.value)" value="{{performanceChartRM.shiftPlan_SubstitutionShifts}}" /></td>
-            <td>{{oneTasksRM1}}</td>
+            <td>{{oneTasksRM01.toFixed(1)}}</td>
           </tr>
         </tbody>
       </table>
