--- a/WebUI/ClientApp/src/app/manager-rm/dashboard/components/dashboard-panel/dashboard-panel.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/dashboard/components/dashboard-panel/dashboard-panel.component.html
@@ -105,7 +105,7 @@
           </thead>
           <tbody>
             <tr *ngIf="Managerid.id == Managerid.workgroup.escortManagerId">
-              <td>{{fullPrecentEC.toFixed(2)}}%</td>
+              <td>{{fullPrecentEC.toFixed(1)}}%</td>
               <td colspan="2">Звонки развития</td>
               <td>{{performanceChartMC.numberPlan_DevelopmentCalls}}</td>
               <td>{{performanceChartMC.shiftPlan_DevelopmentCalls}}</td>
@@ -114,12 +114,12 @@
               <td>{{oneBallsEC}}</td>
               <td>{{tasksEC}}</td>
               <td>{{performanceChartMC.numberPlan_DevelopmentCalls*8}}</td>
-              <td>{{performanceChartMC.numberPlan_DevelopmentCalls + getToMonthkMesageEC()}}</td>
-              <td>{{ballsEC.toFixed(2)}}</td>
+              <td>{{performanceChartMC.numberPlan_DevelopmentCalls + getToMonthkECManager()}}</td>
+              <td>{{ballsEC.toFixed(1)}}</td>
             </tr>
             
             <tr *ngIf="Managerid.id == Managerid.workgroup.regionalManagerId">
-              <td rowspan="3">{{fullPrecentRM.toFixed(2)}}%</td>
+              <td rowspan="3">{{fullPrecentRM.toFixed(1)}}%</td>
               <td colspan="2">Встречи и командировки развития</td>
               <td>{{performanceChartRM.numberPlan_DevelopmentCalls}}</td>
               <td></td>
@@ -138,15 +138,15 @@
               <td>{{performanceChartRM.shiftPlan_YourShifts}}</td>
               <td rowspan="2">{{performanceChartRM.balls_YourShifts}}</td>
               <td>{{oneTasksRM}}</td>
-              <td rowspan="2">{{tasksRM.toFixed()}}</td>
-              <td rowspan="2">{{performanceChartRM.numberPlan_YourShifts*8}}</td>
-              <td rowspan="2">{{performanceChartRM.numberPlan_YourShifts + getToMonthkRegManager()}}</td>
+              <td rowspan="2">{{tasksRM.toFixed(1)}}</td>
+              <td rowspan="2">{{performanceChartRM.numberPlan_DevelopmentCalls*8}}</td>
+              <td rowspan="2">{{performanceChartRM.numberPlan_DevelopmentCalls + getToMonthkRegManager()}}</td>
             </tr>
             <tr *ngIf="Managerid.id == Managerid.workgroup.regionalManagerId">
               <td>Смены замещения</td>
               <td>{{performanceChartRM.numberPlan_SubstitutionShifts}}</td>
               <td>{{performanceChartRM.shiftPlan_SubstitutionShifts}}</td>
-              <td>{{oneTasksRM1}}</td>
+              <td>{{oneTasksRM1.toFixed(1)}}</td>
             </tr>
           </tbody>
         </table>
