Корекция по знакам после запетой у таблиц Эффективности

--- a/WebUI/ClientApp/src/app/manager-rm/dashboard/components/dashboard-panel/dashboard-panel.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/dashboard/components/dashboard-panel/dashboard-panel.component.html
@@ -138,7 +138,7 @@
               <td>{{performanceChartRM.shiftPlan_YourShifts}}</td>
               <td rowspan="2">{{performanceChartRM.balls_YourShifts}}</td>
               <td>{{oneTasksRM}}</td>
-              <td rowspan="2">{{tasksRM.toFixed(1)}}</td>
+              <td rowspan="2">{{tasksRM}}</td>
               <td rowspan="2">{{performanceChartRM.numberPlan_DevelopmentCalls*8}}</td>
               <td rowspan="2">{{performanceChartRM.numberPlan_DevelopmentCalls + getToMonthkRegManager()}}</td>
             </tr>
