--- a/WebUI/ClientApp/src/app/сontroler/plan-task/plan-task/plan-task.component.html
+++ b/WebUI/ClientApp/src/app/сontroler/plan-task/plan-task/plan-task.component.html
@@ -92,7 +92,7 @@
       <ng-container matColumnDef="comentCon">
         <th colspan="12" mat-header-cell *matHeaderCellDef>Комментарий контролера</th>
         <td colspan="12" mat-cell *matCellDef="let element">
-          <textarea style="width:100%;height:60px;margin-top: 15px">{{element.callsComments?.comment}}</textarea><br />
+          <textarea style="width:100%;height:60px;margin-top: 15px">{{getComment(element)}}</textarea><br />
           <div class="btnContainer">
             <button (click)="setNoAccept($event, element.id)" class="btnAccept btnReject">Отклонить</button>
             <button (click)="setAccept($event, element.id)" class="btnAccept btnFixed">Исправлено</button>
@@ -102,7 +102,7 @@
 
       <ng-container matColumnDef="comentCli">
         <th colspan="7" mat-header-cell *matHeaderCellDef>Комментарий менеджера</th>
-        <td colspan="7" mat-cell *matCellDef="let element">{{element.callsComments?.managerComment}}</td>
+        <td colspan="7" mat-cell *matCellDef="let element">{{getManagerComment(element)}}</td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
